<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/linearLayout" tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_text"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="356dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="356dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="162dp" android:layout_marginEnd="160dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:layout_width="80dp"
                android:layout_height="64dp"
                android:src="@drawable/picture"
                android:contentDescription="@string/picture_text"
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="223dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="124dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="325dp" android:layout_marginEnd="326dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"/>
    </android.support.constraint.ConstraintLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LeftBottom_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintVertical_bias="0.977"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RightBottom_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.977"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LeftTop_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.015"
            app:layout_constraintVertical_bias="0.008"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RightTop_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintVertical_bias="0.008"/>
    <android.support.constraint.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                        android:id="@+id/barrier" app:barrierDirection="left"/>
</android.support.constraint.ConstraintLayout>